# productive-desktop-app

./: devcontainer.json  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.mjs
scripts/: post-create.sh
src/: main.jsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Priorities.jsx  Quote.jsx  Todo.jsx  TodoList.jsx  Wallpaper.jsx
